kubernetes/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: three-tier
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
  - port: 3001
    targetPort: 3001
